BE Implement export contacts to file
